Only run pr-ci if it is a non-empty changelist and either a non-closed PR or a redeploy command, only run pr-closed if it is a non-empty changelist, closed PR

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -90,7 +90,11 @@ jobs:
     needs:
       - setup-pr
     # A matrix strategy with no elements is considered an error, so we only run this job if there are changed manifests
-    if: needs.setup-pr.outputs.manifest != '[]'
+    # and it is either a non-closed pull request or an issue comment that starts with !redeploy
+    if: >-
+      needs.setup-pr.outputs.manifest != '[]' &&
+      ((github.event_name == 'pull_request' && github.event.action != 'closed') ||
+      (github.event_name == 'issue_comment' && startsWith(github.event.comment.body, '!redeploy')))
     strategy:
       # The failure of install of an unrelated tool shouldn't affect the others
       fail-fast: false
@@ -112,7 +116,9 @@ jobs:
 
   pr-closed:
     name: Closed
-    if: github.event_name == 'pull_request' && github.event.action == 'closed'
+    if: >-
+      needs.setup-pr.outputs.manifest != '[]' &&
+      github.event_name == 'pull_request' && github.event.action == 'closed'
     needs:
       - setup-pr
     strategy:
