--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,7 +60,9 @@ jobs:
         id: changed-files
         uses: tj-actions/changed-files@ed68ef82c095e0d48ec87eccea555d944a631a4c  # v46.0.6
         with:
-          since_last_remote_commit: true
+          # If it is a non-closed pull request, we want to get the changed files since the last remote commit, so we don't redeploy files not changed in a commit
+          # If it is a closed PR, or an issue_comment with !redeploy, we want to get the changed files across the whole branch
+          since_last_remote_commit: ${{ github.event_name == 'pull_request' && github.event.action != 'closed' }}
           json: true
           output_dir: .
           write_output_files: true
