--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -63,10 +63,16 @@ jobs:
       max-parallel: 1
       matrix:
         manifest: ${{ fromJson(needs.setup-cd.outputs.manifest) }}
-    uses: access-nri/build-cd/.github/workflows/cd.yml@v5-model-tools
+    uses: access-nri/build-cd/.github/workflows/cd.yml@v6
     with:
       model: ${{ matrix.manifest.name }}
       spack-manifest-path: ${{ matrix.manifest.path }}
+      # We have a custom schema for general software deployment manifests, so we specify it here
+      spack-manifest-schema-path: au.org.access-nri/tools/spack/environment/deployment
+      # TODO: Get versions of applicable schema from ACCESS-NRI/schema
+      spack-manifest-schema-version: SET_SCHEMA_VERSION_HERE
+      config-versions-schema-version: SET_SCHEMA_VERSION_HERE
+      config-packages-schema-version: SET_SCHEMA_VERSION_HERE
       # This is a non-model deployment repository, so we do not want to tag the deployment or upload to the build database
       tag-deployment: false
       upload-to-build-db: false
