Add current versions of schemas

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -112,10 +112,9 @@ jobs:
       spack-manifest-path: ${{ matrix.manifest.path }}
       # We have a custom schema for general software deployment manifests, so we specify it here
       spack-manifest-schema-path: au.org.access-nri/tools/spack/environment/deployment
-     # TODO: Get versions of applicable schema from ACCESS-NRI/schema
-      spack-manifest-schema-version: SET_SCHEMA_VERSION_HERE
-      config-versions-schema-version: SET_SCHEMA_VERSION_HERE
-      config-packages-schema-version: SET_SCHEMA_VERSION_HERE
+      spack-manifest-schema-version: 1-0-0
+      config-versions-schema-version: 3-0-0
+      config-packages-schema-version: 1-0-0
 
     permissions:
       pull-requests: write
