--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -69,10 +69,9 @@ jobs:
       spack-manifest-path: ${{ matrix.manifest.path }}
       # We have a custom schema for general software deployment manifests, so we specify it here
       spack-manifest-schema-path: au.org.access-nri/tools/spack/environment/deployment
-      # TODO: Get versions of applicable schema from ACCESS-NRI/schema
-      spack-manifest-schema-version: SET_SCHEMA_VERSION_HERE
-      config-versions-schema-version: SET_SCHEMA_VERSION_HERE
-      config-packages-schema-version: SET_SCHEMA_VERSION_HERE
+      spack-manifest-schema-version: 1-0-0
+      config-versions-schema-version: 3-0-0
+      config-packages-schema-version: 1-0-0
       # This is a non-model deployment repository, so we do not want to tag the deployment or upload to the build database
       tag-deployment: false
       upload-to-build-db: false
