--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -28,8 +28,11 @@ jobs:
           json: true
           output_dir: .
           write_output_files: true
+          # Get every spack.yaml under a directory, but not a spack.yaml at the root
           files: |
             **/spack.yaml
+          files: |
+            spack.yaml
 
       - name: Format changed files
         # We reformat the json list of changed files as list of objects containing the name (the containing folder) and the path (the containing folder AND manifest name)
